--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/hadimktri/HM-SHOP-NODE-JS#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.8",
